samples/_failures_safe/1761664813_2f1a24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d581646.c: In function ‘main’:
./samples/SAFE/__tmp_3d581646.c:163:33: error: expected ‘]’ at end of input
  163 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_3d581646.c:163:5: error: expected declaration or statement at end of input
  163 |     if (len > 0 && input[len - 1
      |     ^~
